fixed paragraph spacing
what happened to my bio paragraph spacing :(

--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -35,7 +35,7 @@
 
 .biobox p {
   font-weight: 400;
-  margin-bottom: 0;
+  margin-bottom: var(--gap-sm);
 }
 
 .biobox a {
